policy/gatekeeper/testdata/errors/template.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# A template whose CEL does not compile, used to check that mistakes are
# reported against the line and column of the template which contains them.
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: errors
spec:
  crd:
    spec:
      names:
        kind: Errors
      validation:
        openAPIV3Schema:
          type: object
          properties:
            maxReplicas:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
            variables:
              - name: replicas
                expression: "object.spec.replicas"
            validations:
              - expression: "object.metadata.name.isWellFormed()"
                message: "malformed name"
              - expression: "variables.replicas <= variables.params.maxReplicas"
                messageExpression: "'too many replicas: ' + variables.replica"
